EliteMobs 8.4.0-SNAPSHOT-1 - [New] Added the item upgrade system!   - Enchanted books allow players to attempt to upgrade an elite item   - Added 45 new items for the default enchanted books, more can be created by admins   - Added the Elite Lucky Ticket which is used alongside with the enchantment books   - Added the Lucky Source and Enchanted Source enchantments which are used to tag lucky tickets and enchanted tickets   - Enchanted books are not soulbound! These are meant to be traded between players. - [New] Repair system overhaul   - There are now only 5 scrap items of different levels, repairing different amounts   - Scrap now repairs significantly more on average   - Removed upgrading scrap   - Added the repair custom enchantment, used to tag scrap   - Scrap is not soulbound! This is meant to be traded between players. - [New] Added comments to the configuration files of EliteMobs, thereby making configuring EliteMobs much easier - [Removal] Removed several now outdated features   - Removed the enhancer   - Removed the refiner   - Removed the smelter   - Old scrap has been entirely replaced   - Removed the old special loot configuration format, scrap, enchantments books and lucky tickets now work like normal items   - Removed the old translation.yml configuration file, since EliteMobs now uses language files instead. Its settings were redistributed to more relevant config files. - [New] Added the SpecialItems.yml configuration file to configure settings related to the enchantment and scrap systems - [New] Added a new loot table for special loot - [New] Wood League arena loot has been updated to drop the new items, requires deleting the wood league arena file - [New] Modified the welcome quest to the adventurer's guild to reflect the new NPCs - [New] Added soulbound config setting for custom items, allowing custom items to be set to not be soulbound - [New] Levitation enchantment will no longer affect custom bosses with a health multiplier above 1 - [New] NPC 